[package]
name = "hashraccoon"
version = "0.0.2"
authors = ["irishmaestro"]
repository = "https://github.com/IrishMaestro/hashraccoon"
description = "MD5/SHA256 HASH ATTACK IN RUST"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
hex = "0.4.3"
md5 = "0.7.0"
num_cpus = "1.13.1"
rayon = "1.5.3"
sha256 = "1.0.3"